[tool.poetry]
name = "text_classifier"
version = "0.1.0"
description = ""
authors = ["ehab-ahma <ehab24495@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
jupyterlab = "^3.2.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
